Update application.properties, remove unused main class

--- a/ircbot/src/main/resources/application.properties
+++ b/ircbot/src/main/resources/application.properties
@@ -18,3 +18,10 @@ bot.auth.pass=
 bot.auth.cmd=PRIVMSG AuthServ@Services.OnlineGamesNet.net :auth $loginName $loginPass
 bot.server=irc.OnlineGamesNet.net
 bot.channels=#wilitestaa
+
+identServer.address=ikavisa.gosu.fi
+identServer.port=113
+
+admin.name=wiliam
+admin.hostname=wiliam.smod.IkariamFi
+
