--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,15 @@ services:
       - "0.0.0.0:5564:113"
     depends_on:
       - mysql
+    environment:
+      DATABASE_URL: jdbc:mysql://db:3306/ircbot
+      DATABASE_USERNAME: root
+      DATABASE_PASSWORD: du6ieMahfaegee3ibeiv2ieM9ohbohma
   mysql:
     image: mysql:8
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_DATABASE=ikavisa
+      MYSQL_DATABASE: ircbot
+      MYSQL_ROOT_PASSWORD:du6ieMahfaegee3ibeiv2ieM9ohbohma
     volumes:
-      - /srv/data/ikavisa/mysql:/var/lib/mysql
+      - /srv/data/aikain/ikariam/ircbot/mysql:/var/lib/mysql
